# chess

./: Cargo.toml  README.md
browser_chess/: Cargo.toml
browser_chess/src/: lib.rs
browser_chess/www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
dumb_chess/: Cargo.toml
dumb_chess/src/: action.rs  coord.rs  final_state.rs  game.rs  main.rs  piece.rs  player.rs  strategy.rs
dumb_chess/tests/: move_test.rs
src/: coord.rs  game.rs  lib.rs  main.rs  piece.rs  player.rs  strategy.rs
