[package]
name = "dumb_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
enum-iterator = "1.5.0"
getrandom =  { version = "0.2.12", features = ["js"] }
rand = "0.8.5"
trace = "0.1.7"
wasm-bindgen = "0.2.90"

[profile.dev]
opt-level = 2
